DataCloudTestProject/force-app/main/default/objects/Customer_Profile_Data__dll/Customer_Profile_Data__dll.object-meta.xml
<CustomObject>
    <label>Customer Profile Data</label>
    <mktDataLakeAttributes>
        <creationType>Custom</creationType>
        <isEnabled>true</isEnabled>
        <objectCategory>Salesforce_SFDCReferenceModel_0_93.Profile</objectCategory>
    </mktDataLakeAttributes>
</CustomObject>