DataCloudTestProject/force-app/main/default/objects/Customer_Profile_Data__dll/fields/Birth_Date__c.field-meta.xml
<CustomField>
    <fullName>Birth_Date__c</fullName>
    <label>Birth Date</label>
    <mktDataLakeFieldAttributes>
        <definitionCreationType>Custom</definitionCreationType>
        <externalName>Birth_Date</externalName>
        <isEventDate>false</isEventDate>
        <isInternalOrganization>false</isInternalOrganization>
        <isRecordModified>false</isRecordModified>
        <usageTag>NONE</usageTag>
    </mktDataLakeFieldAttributes>
    <type>Date</type>
</CustomField>