DataCloudTestProject/force-app/main/default/objects/Customer_Profile_Data__dll/fields/Customer_Ref_Number__c.field-meta.xml
<CustomField>
    <fullName>Customer_Ref_Number__c</fullName>
    <label>Customer Ref Number</label>
    <length>60</length>
    <mktDataLakeFieldAttributes>
        <definitionCreationType>Custom</definitionCreationType>
        <externalName>Customer_Ref_Number</externalName>
        <isEventDate>false</isEventDate>
        <isInternalOrganization>false</isInternalOrganization>
        <isRecordModified>false</isRecordModified>
        <primaryIndexOrder>1</primaryIndexOrder>
        <usageTag>NONE</usageTag>
    </mktDataLakeFieldAttributes>
    <type>Text</type>
</CustomField>