DataCloudTestProject/force-app/main/default/objects/Customer_Profile_Data__dll/fields/KQ_Customer_Ref_Number__c.field-meta.xml
<CustomField>
    <fullName>KQ_Customer_Ref_Number__c</fullName>
    <label>KQ_Customer_Ref_Number</label>
    <length>60</length>
    <mktDataLakeFieldAttributes>
        <definitionCreationType>System</definitionCreationType>
        <externalName>KQ_Customer_Ref_Number</externalName>
        <isEventDate>false</isEventDate>
        <isInternalOrganization>false</isInternalOrganization>
        <isRecordModified>false</isRecordModified>
        <usageTag>KEY_QUALIFIER</usageTag>
    </mktDataLakeFieldAttributes>
    <type>Text</type>
</CustomField>