DataCloudTestProject/force-app/main/default/objects/Customer_Profile_Data__dll/fields/Rewards_Program_ID__c.field-meta.xml
<CustomField>
    <fullName>Rewards_Program_ID__c</fullName>
    <label>Rewards Program ID</label>
    <length>60</length>
    <mktDataLakeFieldAttributes>
        <definitionCreationType>Custom</definitionCreationType>
        <externalName>Rewards_Program_ID</externalName>
        <isEventDate>false</isEventDate>
        <isInternalOrganization>false</isInternalOrganization>
        <isRecordModified>false</isRecordModified>
        <usageTag>NONE</usageTag>
    </mktDataLakeFieldAttributes>
    <type>Text</type>
</CustomField>