DataCloudTestProject/force-app/main/default/objects/Customer_Profile_Data__dll/fields/Surname__c.field-meta.xml
<CustomField>
    <fullName>Surname__c</fullName>
    <label>Surname</label>
    <length>60</length>
    <mktDataLakeFieldAttributes>
        <definitionCreationType>Custom</definitionCreationType>
        <externalName>Surname</externalName>
        <isEventDate>false</isEventDate>
        <isInternalOrganization>false</isInternalOrganization>
        <isRecordModified>false</isRecordModified>
        <usageTag>NONE</usageTag>
    </mktDataLakeFieldAttributes>
    <type>Text</type>
</CustomField>